Update meta tags and title for Studio1111
- Change page title to "Studio1111 Artwork Creator"
- Update Open Graph title and description
- Modify Twitter site, creator, title, and description tags
- Ensure branding consistency with Studio1111

--- a/clients/studio1111/index.html
+++ b/clients/studio1111/index.html
@@ -7,19 +7,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pollinations Artwork Generator</title>
+    <title>Studio1111 Artwork Creator</title>
     <!-- open graph -->
-    <meta property="og:title" content="Disc Mosaic"  data-react-helmet="true" />
-    <meta property="og:description" content="Generate album artwork with Korus"  data-react-helmet="true" />
+    <meta property="og:title" content="Studio1111 Gallery"  data-react-helmet="true" />
+    <meta property="og:description" content="Generate album artwork with Studio1111"  data-react-helmet="true" />
     <meta property="og:image" content="https://replicate.delivery/pbxt/WNCicQBy0QaVEFYIeWYF5v3WFWcfZOiQ6eHOYEpDtzfBpxSFB/out-0.png"  data-react-helmet="true" />
     <meta property="og:url" content="https://luxury-caramel-6607d6.netlify.app/"  data-react-helmet="true" />
     <meta property="og:type" content="website"  data-react-helmet="true" />
     <!-- twitter -->
     <meta name="twitter:card" content="summary_large_image"  data-react-helmet="true"/>
-    <meta name="twitter:site" content="@pollinations_ai"  data-react-helmet="true"/>
-    <meta name="twitter:creator" content="@pollinations_ai"  data-react-helmet="true"/>
-    <meta name="twitter:title" content="Pollinations Artwork Generator"  data-react-helmet="true"/>
-    <meta name="twitter:description" content="Generate album artwork for Pollinations" data-react-helmet="true" />
+    <meta name="twitter:site" content="@studio1111"  data-react-helmet="true"/>
+    <meta name="twitter:creator" content="@studio1111"  data-react-helmet="true"/>
+    <meta name="twitter:title" content="Studio1111 Gallery"  data-react-helmet="true"/>
+    <meta name="twitter:description" content="Generate album artwork for Studio1111" data-react-helmet="true" />
     <meta name="twitter:image" content="https://replicate.delivery/pbxt/WNCicQBy0QaVEFYIeWYF5v3WFWcfZOiQ6eHOYEpDtzfBpxSFB/out-0.png"  data-react-helmet="true"/>
   </head>
   <body>
