Enhance UI with dynamic styles
- Set transparent background for body
- Add random DOCA logo on load
- Implement mouse movement effects
- Introduce fade-in animation for gallery items
- Update gallery styles for a modern look
- Add interactive PayPal link with animations
- Include keyframes for visual effects
- Improve text styles and layout for better readability

--- a/clients/studio1111/index.html
+++ b/clients/studio1111/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:description" content="Generate album artwork for Studio1111" data-react-helmet="true" />
     <meta name="twitter:image" content="https://replicate.delivery/pbxt/WNCicQBy0QaVEFYIeWYF5v3WFWcfZOiQ6eHOYEpDtzfBpxSFB/out-0.png"  data-react-helmet="true"/>
   </head>
-  <body>
+  <body style="background-color: transparent !important">
     
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
